# aa-api-wrapper

./: .env.example  README.md  pyproject.toml
src/: client.py  handlers.py  main.py  openai_request.py  utils.py
src/aa_api_wrapper/: aleph_alpha.py  client.py  handlers.py  http.py  main.py  openai.py  proxy.py  settings.py  utils.py
tests/: end2end_tests.py  test_main.py
